fix: contrast

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -9,7 +9,7 @@
     --active: yellow;
     --nav-text: white;
 
-    --card-backgroud: rgba(128, 128, 128, 0.466);
+    --card-backgroud: #80808048;
 
     --layout: solid 2px red;
 }
